# ChangeLog for app-emacs/yasnippet
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*yasnippet-0.5.2 (26 Apr 2008)

  26 Apr 2008; Ulrich Mueller <ulm@gentoo.org> +yasnippet-0.5.2.ebuild:
  Version bump. Depend on dropdown-list package and remove its inlined code,
  bug 214667. Thanks to MATSUYAMA Tomohiro.

*yasnippet-0.4.4 (27 Mar 2008)

  27 Mar 2008; Ulrich Mueller <ulm@gentoo.org> +files/50yasnippet-gentoo.el,
  +metadata.xml, +yasnippet-0.4.4.ebuild:
  Initial import. Ebuild contributed by MATSUYAMA Tomohiro
  <matsuyama@ariel-networks.com>, bug 214667.
