@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Jun 2008; Ulrich Mueller <ulm@gentoo.org> -yasnippet-0.4.4.ebuild,
+  +yasnippet-0.5.5.ebuild:
+  Version bump. Remove old.
+
 *yasnippet-0.5.2 (26 Apr 2008)
 
   26 Apr 2008; Ulrich Mueller <ulm@gentoo.org> +yasnippet-0.5.2.ebuild:
